# object-detection_system

./: README.md
stream-sever/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
stream-sever/assets/: build_frontend.sh  install_rsync.sh  start_app.sh  stop_app.sh
stream-sever/cmake/: toolchain-luckfox-pico.cmake
stream-sever/src/: CMakeLists.txt  http.cpp  http.h  main.cpp
stream-sever/src/common/: CMakeLists.txt  asio_context.h  logger.h  media_buffer.h
stream-sever/src/httpserver/: CMakeLists.txt  README.md  http_server.cpp  http_server.h
stream-sever/src/media_distribution/: CMakeLists.txt  stream_manager.cpp  stream_manager.h
stream-sever/src/media_distribution/file/: CMakeLists.txt  README.md  file_saver.cpp  file_saver.h  file_service.cpp  file_service.h
stream-sever/src/media_distribution/rtsp/: CMakeLists.txt  README.md  rk_rtsp.cpp  rk_rtsp.h  rtsp_service.cpp  rtsp_service.h
stream-sever/src/media_distribution/webrtc/: CMakeLists.txt  README.md  signaling.cpp  signaling.h  webrtc.cpp  webrtc.h  webrtc_service.cpp  webrtc_service.h
stream-sever/src/media_distribution/wspreview/: CMakeLists.txt  ws_preview.cpp  ws_preview.h
stream-sever/src/media_producer/: CMakeLists.txt  i_media_producer.h  media_manager.cpp  media_manager.h
stream-sever/src/media_producer/simple_ipc/: CMakeLists.txt  mpi_config.h  simple_ipc_config.h  simple_ipc_producer.cpp  simple_ipc_producer.h
stream-sever/www/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
stream-sever/www/src/: App.svelte
vision-client/: main.py
